spade-tests/src/snapshots/spade_tests__linear_check__double_use_of_linear_array_is_wrong.snap
---
source: spade-tests/src/linear_check.rs
---
entity test() {
    let a = [inst new_mut_wire(), inst new_mut_wire()];
    set a[0] = 0u8;
    set a[0] = 0u8;
    set a[1] = 0;
}


error: Use of consumed resource
  ┌─ testinput:4:9
  │
3 │     set a[0] = 0u8;
  │         ---- Previously used here
4 │     set a[0] = 0u8;
  │         ^^^^ Use of consumed resource
